--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.blbulyandavbulyan</groupId>
-    <artifactId>SnackMachine</artifactId>
+    <artifactId>JavaOOPSeminars</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
